Clean initial commit — removed OpenAI key and added .gitignore

--- a/notebooks/genre_tagging_template.ipynb
+++ b/notebooks/genre_tagging_template.ipynb
@@ -1193,7 +1193,7 @@
     "# --- CONFIGURATION --- #\n",
     "INPUT_FILE = \"../data/PureElectroGroove.csv\"            # Change this for new playlists\n",
     "OUTPUT_FILE = \"../output/PureElectroGroove_GenreTagged.csv\"\n",
-    "OPENAI_API_KEY = \"***REMOVED***proj-N7Kkrob5wWm2vJf-4dpS81gPUcIJsF3Ghk4TIy5iZBC-9pX_nAMv3mU5vxAThfbSyYczOFXYdVT3BlbkFJ7eCZ8k4Nn0oWGheFJhstkwgQow3V0cE5u6zDt92m7K1ByRwdEmD1cnzYeKG0MdayoMs6D318gA\"                        # Replace with your API key\n",
+    "OPENAI_API_KEY = \"sk-...\"                        # Replace with your API key\n",
     "\n",
     "# --- SETUP --- #\n",
     "client = OpenAI(api_key=OPENAI_API_KEY)\n",
